flask-app/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: https
      number: 8443
      protocol: HTTPS
    hosts:
    - flask.app-georgij.com
    tls:
      mode: SIMPLE
      credentialName: istio-ca-secret
