flask-app/templates/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app
spec:
  hosts:
  - flask.app-georgij.com
  gateways:
  - myapp-gateway
  http:
  - match:
    - uri:
        exact: /flask
    route:
    - destination:
        host: flask-app.default.svc.cluster.local
        port:
          number: 5000
